package com.saiful.presentation.utils

object TestTags {
    const val PROFILE_IMAGE = "profile_image"
    const val PROFILE_NAME = "profile_name"
    const val SPONSOR_LABEL = "sponsor_label"
    const val MAIN_IMAGE = "main_image"

    const val ERROR_TEXT = "error_text"
    const val ERROR_ACTION_BUTTON = "error_action_button"
    const val EMPTY_TEXT = "empty_text"
    const val EMPTY_ICON = "empty_icon"

    const val CIRCULAR_INDICATOR = "circular_indicator"

    const val COLLECTION_TITLE = "collection_title"
    const val COLLECTION_TOTAL_PHOTOS = "collection_total_photos"

    const val PROFILE_ROW = "profile_row"
}